Have learned about data binfing

--- a/Front-end/firstapp/src/app/app.component.html
+++ b/Front-end/firstapp/src/app/app.component.html
@@ -8,3 +8,7 @@
 <ul>
   <li *ngFor="let name of string"></li>
 </ul>
+
+<h1>Hi Everyone</h1>
+<app-date></app-date>
+<app-address-card></app-address-card>
