--- a/Front-end/firstapp/src/app/app.component.html
+++ b/Front-end/firstapp/src/app/app.component.html
@@ -1,4 +1,4 @@
-<button (click)="getItems();">Get Items</button>
+ <!-- <button (click)="getItems();">Get Items</button>
 
 <ul>
     <li *ngFor="let item of items">{{ item.id }}</li>
@@ -10,5 +10,6 @@
 </ul>
 
 <h1>Hi Everyone</h1>
-<app-date></app-date>
-<app-address-card></app-address-card>
+<app-date></app-date> -->
+<p>-------------------------------------------------</p>
+<app-address-card name="Input Name"></app-address-card>
