--- a/Front-end/firstapp/src/app/app.component.html
+++ b/Front-end/firstapp/src/app/app.component.html
@@ -12,4 +12,6 @@
 <h1>Hi Everyone</h1>
 <app-date></app-date> -->
 <p>-------------------------------------------------</p>
-<app-address-card name="Input Name"></app-address-card>
+<app-address-card [usermy]="userIN"></app-address-card>
+<p>More infomation:</p>
+<app-extra [inform]='extrainform'></app-extra>
