--- a/Front-end/firstapp/src/app/app.component.html
+++ b/Front-end/firstapp/src/app/app.component.html
@@ -14,4 +14,6 @@
 <p>-------------------------------------------------</p>
 <app-address-card [usermy]="userIN"></app-address-card>
 <p>More infomation:</p>
-<app-extra [inform]='extrainform'></app-extra>
+<app-extra [inform]="extrainform"></app-extra>
+<!-- <p><input type="text" [(ngModel)]="inputText"></p>{{inputText}} -->
+<router-outlet></router-outlet>
