Add more components only for learning

--- a/Front-end/firstapp/src/app/address-card/address-card.component.html
+++ b/Front-end/firstapp/src/app/address-card/address-card.component.html
@@ -1,5 +1,5 @@
 <p>address-card works!</p>
-<div class="address">
+<!-- <div class="address">
     <p class="name">{{user.name}}</p>
     <p class="title">{{user.designation}}</p>
     <button (click)="isItCollapse()"> Expand / Collaps </button>
@@ -13,4 +13,4 @@
         <strong>{{user.phone}}</strong>
         </div>
     </div>
-</div>
+</div> -->
