--- a/Front-end/firstapp/src/app/extra/extra.component.html
+++ b/Front-end/firstapp/src/app/extra/extra.component.html
@@ -1,22 +1,21 @@
 <button class="button" *ngIf="isClick" (click)="haveClicked()"> Expand </button>
 <button class="button" *ngIf="!isClick" (click)="haveClicked()"> Collaps </button>
 <div *ngIf="!isClick">
-    <p class="age">Age: {{extraInformation.age}}</p>
-    <p>Work: {{extraInformation.work}}</p>
-    <p>Experince: {{extraInformation.experience}}</p>
-    <p>Skills<strong> Backend:</strong></p>
-    <p>{{extraInformation.skills[0]}}, {{extraInformation.skills[1]}}, {{extraInformation.skills[4]}}</p>
+    <div  *ngIf="extraInformation">
+        <p class="age">Age: {{extraInformation.age}}</p>
+        <p>Work: {{extraInformation.work}}</p>
+        <p>Experince: {{extraInformation.experience}}</p>
+        <p>Skills<strong> Backend:</strong></p>
+        <p>{{extraInformation.skills[0]}}, {{extraInformation.skills[1]}}, {{extraInformation.skills[4]}}</p>
         <p>Skills<strong> Frontend:</strong></p>
-    <p>{{extraInformation.skills[2]}}, {{extraInformation.skills[3]}}</p>
+        <p>{{extraInformation.skills[2]}}, {{extraInformation.skills[3]}}</p>
+    </div>
 </div>
 <p>User name (in GitHub): <input type="text" [(ngModel)] = "userName"></p>
 <button (click) = "search()">Search</button>
-<div *ngFor="let data of dataOfUser">
-    <p>{{data}}</p>
-</div>
-<!-- <div *ngIf="dataOfUser">
+<div *ngIf="dataOfUser">
     <p>URL: {{dataOfUser.url}}</p>
     <p>Username: {{dataOfUser.name}}</p>
     <p>Company: {{dataOfUser.company}}</p>
     <p>Location: {{dataOfUser.location}}</p>
-</div> -->
+</div>
